--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -22,7 +22,7 @@ jobs:
           committer_token: ${{ secrets.GITHUB_TOKEN }}
 
           # Options
-          user: Coordinate-Cat
+          user: Raa-11
           template: classic
           base: header, activity, community, repositories, metadata
           config_display: large
